--- a/sysmon/requirements.txt
+++ b/sysmon/requirements.txt
@@ -1,1 +1,6 @@
-psutil==7.1.0
+# Dependências Python para o SysMon
+# Instale com: pip install -r requirements.txt
+
+# Dependências principais
+psutil>=5.9.0  # Para informações do sistema
+requests>=2.28.0  # Para futuras integrações
